Category page completed with routing

--- a/views/partials/categoryEditPopup.ejs
+++ b/views/partials/categoryEditPopup.ejs
@@ -15,6 +15,11 @@
                 <option value="">Blocked</option>
             </select>
            </div>
+           <div class="flex flex-col w-full">
+            <label class="text-sm" for="">Category Description</label>
+            <textarea class="border-gray-400 border-[.1px]  " name="" id="" cols="20
+            " rows="10"></textarea>
+        </div>
            <div class="flex  space-x-5 items-center">
             <p class="text-sm">Upload image</p>
             <div class="">
