made address and payment page

--- a/views/partials/productUploadPopup.ejs
+++ b/views/partials/productUploadPopup.ejs
@@ -48,6 +48,7 @@
                     <select class="border-gray-400 border-[.1px] w-1/2 rounded-full text-left text-xs px-2 text-gray-500" name="" id="">
                         <option value="">Like new</option>
                         <option value="">Old</option>
+                        <option value="">Readable</option>
                     </select>
                 </div>
                 <div class="flex col-start-1 row-start-7 col-end-3 justify-between mr-5">
