added orderSuccessful page

--- a/views/user/payment.ejs
+++ b/views/user/payment.ejs
@@ -33,7 +33,7 @@
                     
                 </div>
                 <div class="flex  "  id="placeOrder">
-                    <a href="" class="flex flex-col items-center space-y-1">
+                    <a href="/user/placeOrder" class="flex flex-col items-center space-y-1">
                         <div class=" rounded-full h-5 w-5 border border-[#476B73] flex justify-center items-center "> 
                             <div class="h-[14px] w-[14px] bg-[#476B73] rounded-full hidden " id="placeOrderSelected"></div><!--insdie Circle-->
                         </div>
