made address,orderSummery,wishlist,yourOrde rs pages

--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -170,7 +170,7 @@
         </div>
         <div class="mt-3 mx-[-10px] "> <!--Catergoris container-->
             <div> <!--Novel conatiner-->
-                <div class="bg-[#CDDCDF] px-3 ">
+                <div class="bg-[#CDDCDF] px-3 t">
                     <span class="text-[#565656] font-semibold lg:text-lg">Novel</span>
                 </div>
                 <div class="flex space-x-[10px] md:space-x-4 lg:space-x-5 px-2 mt-3 w-full overflow-auto"> <!--Books group container-->
@@ -460,51 +460,6 @@
            </div>
            </div>
         </div>
-        <div id="Sidebar" class="w-[0px] h-full  overflow-hidden fixed top-0 left-0 transition-all duration-300"><!--Side bar Mobile-->
-            <div class="flex justify-between bg-[#5E8E99] ">
-                <div class=" space-y-2 py-5 ">
-                    <a href="" class="px-3 flex items-center space-x-1 text-white">
-                       <img class="h-6" src="/images/user white filled .png" alt="">
-                       <p class="mt-1">Sign In</p>
-                   </a>
-                   <p class="px-3 text-white text-xs ">Open Books ,Open Doors.. </p>
-               </div>
-               <div class="bg-white text-white h-4  ">
-                     <span class="material-symbols-outlined">
-                         close
-                    </span>
-               </div>
-            </div>
-             
-            <div class="h-full  bg-white">
-            <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 rounded-t-sm">
-                <img class="h-4" src="/images/user blue filled.png" alt="">
-                <p class="text-sm text-[#666666]">My Account</p>
-            </a>
-            <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 ">
-                <img class="h-4" src="/images/shopping-cart blue.png" alt="">
-                <p class="text-sm text-[#666666]">My Cart</p>
-            </a>
-            <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 ">
-                <img class="h-4" src="/images/heart fill blue.png" alt="">
-                <p class="text-sm text-[#666666]">Wish List</p>
-            </a>
-            <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 ">
-                <img class="h-4" src="/images/location blue filled.png" alt="">
-                <p class="text-sm text-[#666666]">My Orders</p>
-            </a>
-            <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 ">
-                <img class="h-4" src="/images/open-book blue.png" alt="">
-                <p class="text-sm text-[#666666]">About Us</p>
-            </a>
-            <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100  ">
-                <img class="h-4" src="/images/phone blue filled.png" alt="">
-                <p class="text-sm text-[#666666]">Contact Us</p>
-            </a>
-        </div>
-        </div>
-    </div>
-   
         
 
     
