--- a/views/user/placeOrder.ejs
+++ b/views/user/placeOrder.ejs
@@ -95,7 +95,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="bg-white rounded-md px-5 py-3 space-y-3"><!--Payment method-->
+                <div class="bg-white rounded-md px-5 py-3 space-y-3"><!--get it by -->
                     <div class="space-y-1"> 
                         <p class="text-base font-semibold">Get it by</p>
                         <p class="text-xs text-green-700">Sunday 3 january</p>
