--- a/views/user/orderSuccessful.ejs
+++ b/views/user/orderSuccessful.ejs
@@ -9,8 +9,8 @@
        
         <div class="px-4 mt-5 lg:px-96">
             <div class="bg-white py-3 rounded-md px-5 space-y-10 lg:space-y-20">
-                <div class="flex flex-col items-center">
-                    <div class="flex items-center space-x-2 justify-center">
+                <div class="flex flex-col space-y-1  items-center">
+                    <div class="flex items-center space-x-2  justify-center">
                         <h2 class="text-green-700 font-medium text-xl">Order Successful</h2>
                         <span class="material-symbols-outlined text-green-700 font-semibold">
                             task_alt
