--- a/views/admin/adminProducts.ejs
+++ b/views/admin/adminProducts.ejs
@@ -4,7 +4,7 @@
     <%-include("../partials/header.ejs")%>
     <main class="px-10 flex">
         <div class="left mt-28 space-y-4 border-r-[.1px] border-gray-400  w-fit pt-1 pb-1 pr-2">
-            <a class="flex items-center space-x-2 cursor-pointer hover:bg-gray-200 rounded-sm px-3 py-3">
+            <a href="dashboard" class="flex items-center space-x-2 cursor-pointer hover:bg-gray-200 rounded-sm px-3 py-3">
                 <img class="h-6" src="/images/dashboardIcon.png" alt="">
                 <h2 class="text-base font-semibold text-[#7E7878]">Dashboard</h2>
             </a>
