commit before changing route

--- a/views/partials/productUploadPopup.ejs
+++ b/views/partials/productUploadPopup.ejs
@@ -17,7 +17,7 @@
                     <input class="px-2 border-gray-400 border-[.1px] w-1/2 rounded-full" type="text">
                 </div>
                 <div class="flex col-start-3 row-start-3 col-end-5 justify-between">
-                    <label class="text-sm" for="">Price</label>
+                    <label class="text-sm" for="">Discount</label>
                     <input class="px-2 border-gray-400 border-[.1px] w-1/2 rounded-full" type="text">
                 </div>
                 <div class="flex col-start-1 row-start-4 col-end-3 justify-between mr-5">
