--- a/views/user/buynow.ejs
+++ b/views/user/buynow.ejs
@@ -71,7 +71,7 @@
                 </div>
                 <div class="space-y-1 ">
                     <p class="px-2 font-medium text-sm">Town/City </p>
-                    <input type="text" class="w-full rounded-lg px-4 py-2 text-xs border-[.1px] border-gray-600" placeholder="Enter 6-digit PIN code">
+                    <input type="text" class="w-full rounded-lg px-4 py-2 text-xs border-[.1px] border-gray-600" placeholder="">
                 </div>
                 <div class="space-y-1 ">
                     <label for="state" class="px-2 font-medium text-sm">State </p>
