--- a/views/user/createAccount.ejs
+++ b/views/user/createAccount.ejs
@@ -21,7 +21,7 @@
                     </div>
                     <form action="" class="w-full mt-7">
                         <input class="w-full rounded-md lg:bg-white bg-[#F2F2F2] border-[.2px] outline-none border-[#666666] px-2 py-[6px] placeholder:text-xs text-sm " placeholder="Full name" type="text" name="" id="">
-                        <input class="w-full mt-5 rounded-md lg:bg-white bg-[#F2F2F2] border-[.2px] outline-none border-[#666666] px-2 py-[6px] placeholder:text-xs text-sm " placeholder="Email" type="text" name="" id="">
+                        <input class="w-full mt-5 rounded-md lg:bg-white bg-[#F2F2F2] border-[.2px] outline-none border-[#666666] px-2 py-[6px] placeholder:text-xs text-sm " placeholder="Phone" type="number" name="" id="">
                         <div class="flex mt-5 space-x-5 text-xs text-[#333333] lg:text-sm">
                             <p>Gender</p>
                             <div class="flex items-center space-x-2">
