category data collected from admin and displaed to user/category ('don't have update or delete')

--- a/views/partials/productUploadPopup.ejs
+++ b/views/partials/productUploadPopup.ejs
@@ -53,15 +53,12 @@
                 </div>
                 <div class="flex col-start-1 row-start-7 col-end-3 justify-between mr-5">
                     <label class="text-sm " for="">Status</label>
-                    <select class="border-gray-400 border-[.1px] w-1/2 rounded-full text-left text-xs px-2 text-gray-500" name="" id="">
+                    <select class="border-gray-400 border-[.1px] py-1 w-1/2 rounded-full text-left text-xs px-2 text-gray-500" name="" id="">
                         <option value="">Stock</option>
                         <option value="">No stock</option>
                     </select>
                 </div>
-                <div class="flex col-start-3 row-start-7 col-end-5 justify-between">
-                    <label class="text-sm" for="">Date</label>
-                    <input class="border-gray-400 border-[.1px] w-1/2  text-left text-xs px-2 text-gray-500 py-1 rounded-full" type="date">
-                </div>
+
                 <div class="flex  space-x-5 items-center col-span-4 justify-between ">
                     <label class="text-sm" for="">Publisher</label>
                     <input class="px-2 border-gray-400 border-[.1px] w-[410px] rounded-full" type="text">
