--- a/views/user/createAccount.ejs
+++ b/views/user/createAccount.ejs
@@ -22,6 +22,7 @@
                     <form action="" class="w-full mt-7">
                         <input class="w-full rounded-md lg:bg-white bg-[#F2F2F2] border-[.2px] outline-none border-[#666666] px-2 py-[6px] placeholder:text-xs text-sm " placeholder="Full name" type="text" name="" id="">
                         <input class="w-full mt-5 rounded-md lg:bg-white bg-[#F2F2F2] border-[.2px] outline-none border-[#666666] px-2 py-[6px] placeholder:text-xs text-sm " placeholder="Phone" type="number" name="" id="">
+                        <input class="w-full mt-5 rounded-md lg:bg-white bg-[#F2F2F2] border-[.2px] outline-none border-[#666666] px-2 py-[6px] placeholder:text-xs text-sm " placeholder="email" type="email" name="" id="">
                         <div class="flex mt-5 space-x-5 text-xs text-[#333333] lg:text-sm">
                             <p>Gender</p>
                             <div class="flex items-center space-x-2">
@@ -51,7 +52,7 @@
     </main>
     <div class="lg:hidden flex-grow">
     </div>
-    <div class="px-2 py-2 border-t-[.1px] border-t-[#666666] lg:hidden">
+    <div class="px-2 py-2  border-t-[.1px] border-t-[#666666] lg:hidden">
         <label for="loginPhoneSubmit" class="w-full  " >
             <button class="w-full py-1 text-white rounded-md font-semibold bg-[#C0C0C0]">
                 Continue
