--- a/views/admin/adminCategory.ejs
+++ b/views/admin/adminCategory.ejs
@@ -95,42 +95,34 @@
                     <TH class="font-medium text-center  ">Category</TH>
                     <th class="font-medium text-center">Products</th>
                     <th class="font-medium text-center">Status</th>
-                    <th class="rounded-tr-md font-medium text-center">Action</th>
+                    <th class="rounded-tr-md font-medium">Action</th>
                 </tr>
-                <tr class="bg-white  text-sm  ">
-                    <td class="ps-3 py-2 max-w-[14rem] truncate pr-6 ">#3233322 </td>
-                    <td class="max-w-[14rem] truncate pr-6 font-semibold text-center">Novel</td>
-                    <td class="text-center">122</td>
-                    <td class="flex justify-center items-center mt-1">
-                        <div class="bg-[#DBFCDF] text-[#189E34] rounded-full text-center w-2/3 px-2">Active</div>
-                    </td>
-                    <td>
-                        <div class="flex justify-center space-x-4 cursor-pointer" onclick="showCategoryEdit()">
-                            <img class="h-4" src="/images/edit blue.png" alt="">
-                        </div>
-                    </td>
-                </tr>
-                <tr class="bg-white  text-sm  ">
-                    <td class="ps-3 py-2 max-w-[14rem] truncate pr-6 ">#3233322 </td>
-                    <td class="max-w-[14rem] truncate pr-6 font-semibold text-center">Novel</td>
-                    <td class="text-center">122</td>
-                    <td class="flex justify-center items-center mt-1">
-                        <div class="bg-[#DBFCDF] text-[#189E34] rounded-full text-center w-2/3 px-2">Active</div>
-                    </td>
-                    <td>
-                        <div class="flex justify-center space-x-4 cursor-pointer" onclick="showCategoryEdit()">
-                            <img class="h-4" src="/images/edit blue.png" alt="">
-                        </div>
-                    </td>
-                </tr>
-               
+          
+                    <%categories.forEach(function(data){%>
+                        <tr class="bg-white  text-sm  ">
+                            <td class="ps-3 py-2 max-w-[14rem] truncate pr-6 "><%=data._id%></td>
+                            <td class="max-w-[14rem] truncate pr-6 font-semibold text-center"><%=data.categoryName%></td>
+                            <td class="text-center">122</td>
+                            <td class="flex justify-center items-center mt-1">
+                                <div  <% if(data.Status==="Active"){%>class="bg-[#DBFCDF] itext-[#189E34] rounded-full text-center w-2/3 px-2"<%}else{%>class="bg-[#fbebec] text-[#b16d70] rounded-full text-center w-2/3 px-2"<%}%> ><%=data.Status%></div>
+                            </td>
+                            <td>
+                                 <div class="flex space-x-4">
+                                     <img class="h-4 cursor-pointer" src="/images/edit blue.png" alt="">
+                                     <img   class="h-4 cursor-pointer" src="/images/trash red.png" alt="">
+                                </div>
+                            </td>
+                        </tr>
+                    
+                    <%})%>
+
             </table>
             
            
 
         </div>
     </main>
-    <%-include('../partials/categoryEditPopup.ejs')%>
+    <%-include('../partials/categoryUploadPopup.ejs')%>
     
 </body>
     <script src="/javascripts/admin/adminCategory.js"></script>
