--- a/views/partials/categoryEditPopup.ejs
+++ b/views/partials/categoryEditPopup.ejs
@@ -2,21 +2,20 @@
 <%-include("head.ejs")%>
 <link rel="stylesheet" href="/css/admin/categories.css">
 <body class="bg-slate-200 ">
-    <div class="fixed inset-0 flex justify-center items-center bg-[rgba(0,0,0,0.3)] hidden" id="categoryUploadPopup">
-        <form action="/admin/category" id="Categorysubmit" onsubmit="prevent(event)" method="post" enctype="multipart/form-data" class=" bg-white rounded-lg w-fit  py-8 px-5 relative space-y-6 text-sm pr-8 pt-10">
+    <div class="fixed inset-0 flex justify-center items-center bg-[rgba(0,0,0,0.3)] hidden" id="categoryEditPopup">
+        <form action="/admin/category/update" id="CategoryEditsubmit"  method="post" enctype="multipart/form-data" class=" bg-white rounded-lg w-fit  py-8 px-5 relative space-y-6 text-sm pr-8 pt-10">
            <div  class="space-x-10 flex justify-between">
             <label for="">Category</label>
             <div>
-                <input  type="text" name="categoryName" id="categoryName" class="px-2 border-gray-400 border-[.1px] w-80 rounded-full">
-                <span id="categoryNameError" class=" text-[10px] text-red-600 space-y-0  hidden">Category name cannot be empty !!</span>
+                <input  type="text" name="categoryName" id="categoryEditName" class="px-2 border-gray-400 border-[.1px] w-80 rounded-full ">
+                <span id="categoryNameEditError" class=" text-[10px] text-red-600 space-y-0  hidden">Category name cannot be empty !!</span>
             </div>
-           
-           
+            <input name="id" id="Id" class="hidden" type="text">
            </div>
            
            <div  class="space-x-16 flex w-full">
             <label  for="">Status</label>
-            <select  class="border-gray-400 border-[.1px] w-4/12  rounded-full text-left text-xs px-2 text-gray-500" name="status" id="">
+            <select  class="border-gray-400 border-[.1px] w-4/12  rounded-full text-left text-xs px-2 text-gray-500" name="status" id="categoryEditStatus">
                 <option value="Active">Active</option>
                 <option value="Blocked">Blocked</option>
             </select>
@@ -24,30 +23,30 @@
            <div class="flex flex-col w-full">
             <label class="text-sm" name="" for="">Category Description</label>
             <div>
-                <textarea  class="border-gray-400 border-[.1px]  w-full " name="categoryDescription" id="categoryDescription" cols="20
+                <textarea   class="border-gray-400 border-[.1px]  w-full " name="categoryDescription" id="categoryEditDescription" cols="20
                 " rows="10"></textarea>
-                <span id="categoryDescriptionError" class="text-[10px] text-red-600 hidden">Category Description cannot be empty !!</span>
+                <span id="categoryDescriptionEditError" class="text-[10px] text-red-600 hidden">Category Description cannot be empty !!</span>
             </div>
            
             </div>
            <div class="flex  space-x-5 items-center">
             <p class="text-sm">Upload image</p>
             <div class="">
-                <input  type="file" accept="image/*" name="categoryImage" id="productImage" hidden onchange="Imagedone()" >
-                <label for="productImage" class="flex items-center space-x-2 border-dotted border-[.1px] border-gray-400 px-2 w-fit py-2 cursor-pointer">
-                    <img src="/images/imageUpload.png" id="UploadImage" alt="" class="h-4  " >
-                    <img class="h-4 hidden" src="/images/tick.png" id="tickImage" alt="">
-                    <p class="text-sm text-[#666666] " id="BrowseImage">Browse image</p>
-                    <p class="text-sm text-[#666666] hidden  " id="imageDone">Done</p>
+                <input  type="file" accept="image/*" name='editImg' id="productImageEdit" hidden  >
+                <label for="productImageEdit" class="flex items-center space-x-2 border-dotted border-[.1px] border-gray-400 px-2 w-fit py-2 cursor-pointer">
+                    <img src="/images/imageUpload.png" id="UploadImageEdit" alt="" class="h-4  " >
+                    <img class="h-4 hidden" src="/images/tick.png" id="tickImageEdit" alt="">
+                    <p class="text-sm text-[#666666] " id="BrowseImageEdit">Browse image</p>
+                    <p class="text-sm text-[#666666] hidden  " id="imageEditDone">Done</p>
                 </label>
             </div>
            
     </div>  
-    <span id="imageUploadError" class="text-[10px]  text-red-600 hidden">Upload suitable image for this category !!</span>
+    <span id="imageUploadEditError" class="text-[10px]  text-red-600 hidden">Upload suitable image for this category !!</span>
            <div class="w-full ">
             <button id="CategorysubmitButton"  type="submit" class="bg-[#DAA520] text-white w-full rounded-full  text-base font-normal flex justify-center items-center ">
-                <span id="saveSpan">Save</span>
-                <div class="flex items-center justify-center font-normal hidden" id="loading">
+                <span id="saveSpanEdit">Save</span>
+                <div class="flex items-center justify-center font-normal hidden" id="loadingEdit">
                     <svg aria-hidden="true" role="status" class="inline w-4  h-4 me-3 text-white animate-spin" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="#E5E7EB"/>
                         <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentColor"/>
@@ -56,7 +55,7 @@
                 </div>
            </button>
         </div>
-           <div class="absolute -top-4 cursor-pointer right-2" onclick="hideCategoryUpload()">
+           <div class="absolute -top-4 cursor-pointer right-2" onclick="hideCategoryEdit()">
             <img class="h-6" src="/images/close.png" alt="">
             </div>
         </form>
