category almost done filter sort but without count of product and also it refresh the entire page in each sort search filter or somethibng

--- a/views/admin/adminProducts.ejs
+++ b/views/admin/adminProducts.ejs
@@ -138,7 +138,7 @@
                     <td>Arthur Conan Doyle</td>
                     <td>₹299</td>
                     <td class="flex justify-center items-center mt-1">
-                        <div class="bg-[#FBEBEC] text-[#B16D70] rounded-full text-center w-2/3 px-2">no stock</div>
+                        <div class="bg-[#FBEBEC] text-[#B16D70] rounded-full text-center w-2/3 px-2 whitespace-nowrap">no stock</div>
                     </td>
                     <td>
                         <div class="flex space-x-4 cursor-pointer">
