--- a/views/admin/adminCategory.ejs
+++ b/views/admin/adminCategory.ejs
@@ -35,52 +35,38 @@
             <div class="searchandsort flex  justify-between">
                 <div class="flex space-x-7 ">
                     <div class="flex space-x-7">
-                        <form action="" class="flex space-x-1 "><!--sort-->
+                        <form action="/admin/category/sort" method="post" id="CategorySortForm" class="flex space-x-1 "><!--sort-->
                             <div class="flex items-center space-x-1">
                                 <label class="text-xs text-[#333333]" for="">sort</label>
-                              <select name="" id="" class="rounded-md px-2 py-1 text-xs text-[#666666 outline outline-[.1px] outline-gray-400">
-                                <option  value="">Product name</option>
-                                <option value="">Price</option>
+                              <select name="" id="sortSelect"  class="rounded-md px-2 py-1 text-xs text-[#666666 outline outline-[.1px] outline-gray-400">
+                                <option  value="CategoryName">Category name</option>
+                                <option value="ProductCount">Product count</option>
                               </select>
                             </div>
                             <div class="flex  items-center space-x-1">
-                                <label class="text-xs text-[#333333]" for="">by</label>
-                             <select name="" id="" class=" outline outline-[.1px] outline-gray-400 rounded-md px-2 py-1 text-xs text-[#666666]">
-                                <option value="">A-Z
-                                </option>
-                                <option value="">Z-A</option>
-                                <option value="">Newset first</option>
-                                <option value="">Oldesr first</option>
+                                <label class="text-xs text-[#333333]" for="sortHow">by</label>
+                             <select name="sortValue" id="sortHow" class=" outline outline-[.1px] outline-gray-400 rounded-md px-2 py-1 text-xs text-[#666666]">
+                                <option id="createdId" value="<%=locals.sortStatus%>"><%=locals.sortStatus  ||"sort type"%></option>
                              </select>
                             </div>
-                            
-        
                         </form>
-                        <form action=""  ><!--filter-->
-                            <select name="" id=""  class=" outline outline-[.1px] outline-gray-400 rounded-md px-2 py-1 text-xs text-[#666666]">
-                                <option value="">All categories</option>
-                                <option value="">Novel</option>
-                                <option value="">Fantasy</option>
-                                <option value="">Comic</option>
-                                <option value="">Relegious</option>
-                                <option value="">Comedy</option>
-                                <option value="">Myseterious</option>
-                                <option value="">Below 100</option>
-                                <option value="">100-200</option>
-                                <option value="">200-300</option>
-                                <option value="">above 300</option>
-                            </select>
+                        <form action="/admin/category/filter"  method="post" id="filterForm"><!--filter-->
+                                <select  name="categoryFilter"  id="categoryFilter"  class=" outline outline-[.1px] outline-gray-400 rounded-md px-2 py-1 text-xs text-[#666666]">
+                                    <option value="<%=locals.filterValue%>"><%=locals.filterValue ||" Filter by"%></option>
+                                    <option value="All">All</option>
+                                    <option value="Active">Active</option>
+                                    <option value="Blocked">Blocked</option>
+                                </select>
                         </form>
                     </div>
                    
-                    <form action=""> <!--search-->
+                    <form action="/admin/category/search" method="post"> <!--search-->
                         <div class="flex items-center rounded-md bg-white    text-[#666666] outline outline-[.1px] outline-gray-400">
-                            <input type="text" class="outline-none rounded-md pl-3 text-xs w-80 placeholder:text-xs" name="" id="" placeholder="Search products.. ">
-                            <div class="bg-[#DAA520] px-1 py-1 rounded-md h-full">
+                            <input value="<%=locals.searchvalue%>" type="text" class="outline-none rounded-md pl-3 text-xs w-80 placeholder:text-xs" name="categorySearch" id="" placeholder="Search by Category name.. ">
+                            <button type="submit" class="bg-[#DAA520] px-1 py-1 rounded-md h-full cursor-pointer" >
                                 <img src="/images/search white.png" class="h-4" alt="">
-                            </div>
+                            </button>
                         </div>
-                        
                     </form>
                 </div>
                 <form action="" class="relative flex justify-end cursor-pointer" onclick="showCategoryEdit()">
@@ -109,7 +95,7 @@
                             <td>
                                  <div class="flex space-x-4">
                                     <a  onclick="editCategory(this)" id="<%=data._id%>"   ><img class="h-4 cursor-pointer" src="/images/edit blue.png" alt=""></a> 
-                                    <a href=""><img   class="h-4 cursor-pointer" id="<%=data._id%>"  src="/images/trash red.png" alt=""></a> 
+                                    <img onclick="deleteCategory(this)"   class="h-4 cursor-pointer" id="<%=data._id%>"  src="/images/trash red.png" alt="">
                                 </div>
                             </td>
                         </tr>
@@ -119,7 +105,7 @@
     </main>
     <%-include('../partials/categoryUploadPopup.ejs')%>
     <%-include('../partials/categoryEditPopup.ejs')%>
-    
+    <%-include('../partials/deleteCategory.ejs')%>
 </body>
     <script src="/javascripts/admin/adminCategory.js"></script>
 </html>
